code added by branch2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 spring.jpa.hibernate.ddl-auto=update
 server.port=7979
+code added by branch2
